RESOLVED FIXED175796
Call updateIsPlayingMedia whenever m_userHasInteractedWithMediaElement changes
https://bugs.webkit.org/show_bug.cgi?id=175796
Summary Call updateIsPlayingMedia whenever m_userHasInteractedWithMediaElement changes
Matt Rajca
Reported 2017-08-21 17:07:50 PDT
The Media State depends on m_userHasInteractedWithMediaElement, so force it to update as soon as m_userHasInteractedWithMediaElement changes.
Attachments
Patch (3.30 KB, patch)
2017-08-21 19:37 PDT, Matt Rajca
no flags
Patch (6.76 KB, patch)
2017-08-21 19:44 PDT, Matt Rajca
no flags
Matt Rajca
Comment 1 2017-08-21 19:37:39 PDT
Matt Rajca
Comment 2 2017-08-21 19:44:07 PDT
Matt Rajca
Comment 3 2017-08-22 08:56:37 PDT
Radar WebKit Bug Importer
Comment 4 2017-08-22 08:57:38 PDT
Note You need to log in before you can comment on or make changes to this bug.