Call updateIsPlayingMedia whenever m_userHasInteractedWithMediaElement changes https://bugs.webkit.org/show_bug.cgi?id=175796

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/video-user-gesture-tracking.html

The page media state depends on m_userHasInteractedWithMediaElement, so force it to update
as soon as m_userHasInteractedWithMediaElement changes. This fixes an issue where the media
state would not reflect the user interaction flag until a call to updateIsPlayingMedia was made.

* dom/Document.cpp:
(WebCore::Document::noteUserInteractionWithMediaElement):
* dom/Document.h:
(WebCore::Document::noteUserInteractionWithMediaElement): Deleted.
* testing/Internals.cpp:
(WebCore::Internals::pageMediaState):

LayoutTests:

Skip the test on iOS like all the other tests that use runWithKeyDown.

* media/video-user-gesture-tracking-expected.txt: Added.
* media/video-user-gesture-tracking.html: Added.

Canonical link: https://commits.webkit.org/192470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221014 268f45cc-cd09-0410-ab3c-d52691b4dbfc